# django_bootstrap

./: .aliyun_fc.example  .env  .env.example  .env.exmaple  .env.exmaple.json  .gitignore  README.md  index.py  manage.py  pyproject.toml
admin/: api_schema.py  urls.py
admin/migrations/: 0001_initial.py
common/: models.py  urls.py
common/migrations/: 0001_initial.py
common/views/: foo.py
deploy/: Dockerfile  build_zip.sh  uwsgi.ini
deploy/scripts/: restart_container.sh  server_config.sh  start_container.sh
django_bootstrap/: asgi.py  settings.py  urls.py  wsgi.py
example_app/migrations/: 0001_initial.py
example_app/views/: foo.py
project_tools/: apps.py  create_new_project.sh  file_content_util.py
project_tools/management/commands/: db_auth.py  enable_mobile_auth.py  enable_username_password_auth.py  enable_wechat_mini_auth.py  fc.py  newapp.py
project_tools/management/commands/db_auth/db_auth_template/: apps.pyt  authentication.pyt  models.pyt  urls.pyt
project_tools/management/commands/db_auth/db_auth_template/mobile/: support_mobile.pyt  support_mobile_ali_sms_util.pyt
project_tools/management/commands/newapp/new_app_template/: apps.pyt
shared/: redis_utils.py  response.py  view_decorators.py
shared/auth/: authentication.py
shared/auth/demo/: authenticator_demo.py  mobile_user_store.py  union_id_user_store.py  username_user_store.py
shared/auth/mobile/: support_mobile.py
shared/auth/user_and_pass/: support_username_password.py
shared/auth/wechat/: support_wechat_mini.py
(+3 files in other folders)
