[tool.poetry]
name = "django_bootstrap"
version = "0.1.0"
description = ""
authors = ["kellyxiepei/django_bootstrap"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "3.2.4"
dynaconf = "3.1.4"
mysqlclient = "2.0.3"
marshmallow = "3.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
